Bug 250035 - Kmail 2 beta from kdepim 4.4.93 system tray icon does not count unread inbox mail
Summary: Kmail 2 beta from kdepim 4.4.93 system tray icon does not count unread inbox ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 258135 259663 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-03 16:28 UTC by whashnez
Modified: 2010-12-16 21:30 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description whashnez 2010-09-03 16:28:49 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux



Reproducible: Didn't try
Comment 1 whashnez 2010-09-04 09:30:00 UTC
I accidently did not write Description for the bug, but the summary is self explaining. I cannot see how many new mails I have on the system tray icon of kamil.
Comment 2 Dustin 2010-09-10 01:29:56 UTC
I have the same issue with Kmail 2 beta from kdepim 4.4.93.
Using KDE 4.5.1 on Arch Linux
Comment 3 Matěj Laitl 2010-09-11 16:36:57 UTC
Same here with kdepim 4.4.93 on KDE 4.5.1. The tooltip of kmail icon correstly says number of new mails, but the icon is always drawn without any number on it.
Comment 4 Andrey Borzenkov 2010-09-22 15:40:13 UTC
Confirmed with KMail2 2.0.18 (from memory) and KDE 4.5.68
Comment 5 octo 2010-11-26 20:52:41 UTC
This bug should be confirmed , I am in suse 11.3 using Kde (4.5.80) 4.6 beta1, and since then have Kmail 2.0.89 and I also have no number count of unread mail. 

Thanks
Comment 6 Torgny Nyblom 2010-11-26 22:06:55 UTC
The issue seems to be not inside KMSystemTray but in its usage of KStatusNotifierItem. In this the function setOverlayIconbyPixmap() is a no op due to the fact that no tray icon is associated with it, and this is due to org.kde.StatusNotifierWatcher.

In conclusion this seems like a missed porting when something in the statustray was updated.
Comment 7 Christophe Marin 2010-11-30 13:27:58 UTC
*** Bug 258135 has been marked as a duplicate of this bug. ***
Comment 8 Steffen Schloenvoigt 2010-12-02 19:30:34 UTC
Same here with 4.6beta from the openSUSE 11.3 Factory Desktop Repository.
Please bring back this feature!
Comment 9 Jakub Schmidtke 2010-12-10 01:35:55 UTC
Same here, kmail 2.0.89 and KDE 4.5.85 (4.6 Beta2)
Comment 10 Torgny Nyblom 2010-12-16 21:04:04 UTC
*** Bug 259663 has been marked as a duplicate of this bug. ***
Comment 11 Torgny Nyblom 2010-12-16 21:04:54 UTC
SVN commit 1207066 by tnyblom:

Fix the missing part of the unread message count in systemtray.
Text now scales to fit.

BUG: 250035



 M  +10 -30    kmsystemtray.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207066