Fix the missing part of the unread message count in systemtray. Text now scales to fit.

BUG: 250035


svn path=/trunk/KDE/kdepim/kmail/; revision=1207066